# esp32s3-face-access

./: .gitignore  CMakeLists.txt  README.md  app_main.c  display.c  idf_component.yml  wifi.c
main/: CMakeLists.txt  Kconfig.projbuild  camera_task.c  config.h  display.h  door.c  door.h  mpu6050.c  mpu6050.h  mqtt.c  mqtt.h  task.c  task.h  utils.c  utils.h  wifi.h
